--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>prueba de GIT</title>
 </head>
+<header>PRIMERA PRUEBA CON GIT</header>
 <body>
     
 </body>
