--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <header>PRIMERA PRUEBA CON GIT</header>
 <body>
-    <h1>prueba</h1>
+    <h1>prueba 1</h1>
+    <UL>
+        <li>aa</li>
+        <li>bb</li>
+        <li>cc</li>
+        
+    </UL>
 </body>
 </html>
